@@ -24,9 +24,12 @@
 #include <sysdep.h>
 #include <fpu_control.h>
 #include <sys/param.h>
-#include <sys/sysctl.h>
 #include <sys/types.h>
 #include "kernel-features.h"
+
+#ifndef SHARED
+# include "dl-osinfo.h"
+#endif
 
 extern void __libc_init_secure (void);
 extern void __libc_init (int, char **, char **);
@@ -69,68 +72,9 @@ init (int argc, char **argv, char **envp)
   /* Make sure we don't initialize twice.  */
   if (!__libc_multiple_libcs)
     {
-      /* Test whether the kernel is new enough.  This test is only
-         performed if the library is not compiled to run on all
-         kernels.  */
-      if (__LINUX_KERNEL_VERSION > 0)
-	{
-	  static const int sysctl_args[] = { CTL_KERN, KERN_OSRELEASE };
-	  char buf[64];
-	  size_t reslen = sizeof (buf);
-	  unsigned int version;
-	  int parts;
-	  char *cp;
-
-	  /* Try reading the number using `sysctl' first.  */
-	  if (__sysctl ((int *) sysctl_args,
-			sizeof (sysctl_args) / sizeof (sysctl_args[0]),
-			buf, &reslen, NULL, 0) < 0)
-	    {
-	      /* This was not successful.  Now try reading the /proc
-		 filesystem.  */
-	      int fd = __open ("/proc/sys/kernel/osrelease", O_RDONLY);
-	      if (fd == -1
-		  || (reslen = __read (fd, buf, sizeof (buf))) <= 0)
-		/* This also didn't work.  We give up since we cannot
-		   make sure the library can actually work.  */
-		__libc_fatal ("FATAL: cannot determine library version\n");
-
-	      __close (fd);
-	    }
-	  buf[MIN (reslen, sizeof (buf) - 1)] = '\0';
-
-	  /* Now convert it into a number.  The string consists of at most
-	     three parts.  */
-	  version = 0;
-	  parts = 0;
-	  cp = buf;
-	  while ((*cp >= '0') && (*cp <= '9'))
-	    {
-	      unsigned int here = *cp++ - '0';
-
-	      while ((*cp >= '0') && (*cp <= '9'))
-		{
-		  here *= 10;
-		  here += *cp++ - '0';
-		}
-
-	      ++parts;
-	      version <<= 8;
-	      version |= here;
-
-	      if (*cp++ != '.')
-		/* Another part following?  */
-		break;
-	    }
-
-	  if (parts < 3)
-	    version <<= 8 * (3 - parts);
-
-	  /* Now we can test with the required version.  */
-	  if (version < __LINUX_KERNEL_VERSION)
-	    /* Not sufficent.  */
-	    __libc_fatal ("FATAL: kernel too old\n");
-	}
+#ifndef SHARED
+      DL_SYSDEP_OSCHECK (__libc_fatal);
+#endif
 
       /* Set the FPU control word to the proper default value if the
 	 kernel would use a different value.  (In a static program we
